--- a/index.css
+++ b/index.css
@@ -10,3 +10,11 @@ body {
     margin: auto;
     width: 100%;
 }
+
+.button-restart {
+    margin: auto;
+    display: block;
+    background-color: #0a9a87;
+    border: 2px solid black;
+    padding: 10px;
+}
