--- a/bundles/index/index.hbs
+++ b/bundles/index/index.hbs
@@ -233,5 +233,5 @@ C11.256823576349547,9.707664518805037 8.736898066924521,12.507581751499515
         </svg>
         <button class="button-restart" id="restart"> Перезапустить</button>
     </div>
-    <script type="text/javascript" src="piggy.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </div>
