--- a/bundles/layout.hbs
+++ b/bundles/layout.hbs
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="index.css"/>
     <meta charset="UTF-8" />
     <title>Piggy</title>
-    <link rel="shortcut icon" href="/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/40a4e4c59ff2d63392bf5989a331082e.png" type="image/png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"
             integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
