--- a/bundles/index/index.css
+++ b/bundles/index/index.css
@@ -1,20 +1,56 @@
 body {
-    margin: 0;
-
+    margin: 10px;
     background-color: #D6EDEE;
 }
 .page {
+    display: flex;
+    flex-direction: row;
     position: relative;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 .svg-layer {
-    margin: auto;
-    width: 100%;
+    width: 70%;
+    margin-top: 0;
+}
+
+.svg-layer_picture {
+
 }
 
 .button-restart {
     margin: auto;
     display: block;
     background-color: #0a9a87;
-    border: 2px solid black;
     padding: 10px;
+    border-radius: 2px;
+}
+
+.speech {
+    width: 30%;
+}
+
+.speech__header {
+
+}
+
+.speech__text {
+    width: 100%;
+    height: 100px;
+    background-color: #fff;
+    border: solid 1px black;
+}
+
+@media screen and (max-device-width: 600px) and (max-width: 600px){
+    .page {
+        display: block;
+    }
+
+    .speech {
+        width: 100%;
+    }
+
+    .svg-layer {
+        width: 100%;
+    }
 }
