--- a/bundles/index/index.hbs
+++ b/bundles/index/index.hbs
@@ -1,5 +1,9 @@
 <div class="page">
-    <div class="svg-layer">
+    <section class="speech">
+        <div class="speech__text"></div>
+        <button class="button-restart" id="restart"> Перезапустить</button>
+    </section>
+    <section class="svg-layer">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
              class="svg-layer_picture" pageAlignment="none" x="0px" y="0px" width="100%" height="495px"
              viewBox="0 0 842 495" enable-background="new 0 0 842 595" xml:space="preserve">
@@ -8,8 +12,8 @@
                                 x2="0.718739970288027" y2="405.1394178553481"
                                 id="sky-gradient" gradientUnits="userSpaceOnUse"
                                 gradientTransform="matrix(1 0 0 1 0 0)">
-                    <stop offset="0" style="stop-color:rgb(35, 41, 116)"> </stop>
-                    <stop offset="1" style="stop-color:rgb(136, 211, 240)"> </stop>
+                    <stop id="sky-high" offset="0" style="stop-color:rgb(35, 41, 116)"> </stop>
+                    <stop id="sky-bottom" offset="1" style="stop-color:rgb(136, 211, 240)"> </stop>
                 </linearGradient>
                 <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
                     <stop offset="0%" style="stop-color:rgb(253, 0, 0);stop-opacity:1"> </stop>
@@ -231,7 +235,6 @@ C11.256823576349547,9.707664518805037 8.736898066924521,12.507581751499515
                 </g>
             </g>
         </svg>
-        <button class="button-restart" id="restart"> Перезапустить</button>
-    </div>
+    </section>
     <script type="text/javascript" src="index.js"></script>
 </div>
