--- a/bundles/index/index.hbs
+++ b/bundles/index/index.hbs
@@ -2,18 +2,19 @@
     <section class="speech">
         <div class="speech__text"></div>
         <button class="button-restart" id="restart"> Перезапустить</button>
+        <button class="button-restart" id="darkness">Очень темно</button>
+        <button class="button-restart" id="dark">Темно</button>
+        <button class="button-restart" id="normal">Нормальное освещение</button>
+        <button class="button-restart" id="light">Светло</button>
     </section>
     <section class="svg-layer">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
              class="svg-layer_picture" pageAlignment="none" x="0px" y="0px" width="100%" height="495px"
              viewBox="0 0 842 495" enable-background="new 0 0 842 595" xml:space="preserve">
             <defs>
-                <linearGradient x1="0.718739970288027" y1="-2.1474349245779933"
-                                x2="0.718739970288027" y2="405.1394178553481"
-                                id="sky-gradient" gradientUnits="userSpaceOnUse"
-                                gradientTransform="matrix(1 0 0 1 0 0)">
-                    <stop id="sky-high" offset="0" style="stop-color:rgb(35, 41, 116)"> </stop>
-                    <stop id="sky-bottom" offset="1" style="stop-color:rgb(136, 211, 240)"> </stop>
+                <linearGradient x1="0" y1="-300" x2="0" y2="450" id="sky-gradient" gradientUnits="userSpaceOnUse">
+                    <stop offset="0%" style="stop-color:#252850"> </stop>
+                    <stop offset="100%" style="stop-color:#88d3f0"> </stop>
                 </linearGradient>
                 <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
                     <stop offset="0%" style="stop-color:rgb(253, 0, 0);stop-opacity:1"> </stop>
