Питание. Флаги изменений состояния.

--- a/bundles/index/index.hbs
+++ b/bundles/index/index.hbs
@@ -109,6 +109,10 @@ Q203.46946046912464,358.1850740311477 204.66123381369613,348.6508872745758
 L201.08591377998167,328.3907404168606 Q155.79852668626532,297.4046334580021
 155.79852668626532,291.4457667351446 Q155.79852668626532,285.48690001228715
 277.35940783255654,194.91212582485448 "> </path>
+                        <path transform="matrix(1 0 0 1 -330 -350)"
+     style="fill:#ffffff;fill-rule:evenodd;stroke:#000000;stroke-width:0.43910488px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+     d="m 477.27464,370.07299 c 49.35984,-58.81717 124.67115,-37.7312 49.33596,-58.27273 -75.33518,-20.54153 -49.33596,58.27273 -49.33596,58.27273 z"
+     id="path3405"> </path>
                     </g>
                     <g class="face">
                         <path class="right-ear" transform="matrix(1 0 0 1 -55.419057790818556 -67.25600069912738)"
@@ -235,6 +239,7 @@ C11.256823576349547,9.707664518805037 8.736898066924521,12.507581751499515
                     </g>
                 </g>
             </g>
+
         </svg>
     </section>
     <script type="text/javascript" src="index.js"></script>
