--- a/bundles/index/index.hbs
+++ b/bundles/index/index.hbs
@@ -1,11 +1,16 @@
 <div class="page">
-    <section class="speech">
-        <div class="speech__text"></div>
+    <section class="features">
+        <div class="features__text"></div>
         <button class="button-restart" id="restart"> Перезапустить</button>
         <button class="button-restart" id="darkness">Очень темно</button>
         <button class="button-restart" id="dark">Темно</button>
         <button class="button-restart" id="normal">Нормальное освещение</button>
         <button class="button-restart" id="light">Светло</button>
+
+        <div class="audio-holder">
+            <audio class="eat-song eat-song_hidden" src="92ca62c3023d6ed3888d564e0f03b174.mp3" loop controls></audio>
+            <audio class="sleep-song sleep-song_hidden" src="3dc2bb3ddbda8d6080843d741fd45cda.mp3" loop controls></audio>
+        </div>
     </section>
     <section class="svg-layer">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
